# XLAFFI_RedHat

./: README.md
ffi/: CMakeLists.txt  identity.cc  new.cc  rms_norm.cc  row_sum.cc  sumrows.cc
ffi/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
python/: identity.py  rms_norm.py  row_sum.py  test.py
